--- a/ParkingLot.html
+++ b/ParkingLot.html
@@ -14,12 +14,12 @@
     <div class="sidebar">
         <Header><i class="fa-solid fa-car-tunnel"></i> Easy Park</Header>
         <ul>
-            <li style="background-color: rgb(122, 29, 199);"><a href="index.html"><i class="fa-solid fa-house-user"></i> Main
+            <li><a href="index.html"><i class="fa-solid fa-house-user"></i> Main
                     Dasbord</a></li>
             <li><a href="Employees.html"><i class="fa-solid fa-street-view"></i> Employees</a></li>
             <li><a href="Parking.html"><i class="fa-solid fa-square-parking"></i> Parking</a></li>
             <li><a href="IDTags.html"><i class="fa-solid fa-fingerprint"></i> ID tags</a></li>
-            <li><a href="ParkingLot.html"><i class="fa-solid fa-warehouse"></i> Parking lot</a></li>
+            <li style="background-color: rgb(122, 29, 199);"><a href="ParkingLot.html"><i class="fa-solid fa-warehouse"></i> Parking lot</a></li>
             <li><a href="Reports.html"><i class="fa-solid fa-flag"></i> Reports</a></li>
         </ul>
     </div>
