implementing button design using CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="sidebar">
         <Header><i class="fa-solid fa-car-tunnel"></i> Easy Park</Header>
         <ul>
-            <li style="background-color: rgb(122, 29, 199);"><a href="index.html"><i class="fa-solid fa-house-user"></i> Main
+            <li style="background-color: rgb(122, 29, 199);"><a href="index.html"><i class="fa-solid fa-house-user"></i>
+                    Main
                     Dasbord</a></li>
             <li><a href="Employees.html"><i class="fa-solid fa-street-view"></i> Employees</a></li>
             <li><a href="Parking.html"><i class="fa-solid fa-square-parking"></i> Parking</a></li>
@@ -24,10 +25,29 @@
         </ul>
     </div>
     <div class="wrapper">
-        <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta laborum natus inventore animi ex vitae
-            fuga, tempore tempora quas! Quas eum enim quis dolore illum, sunt minima tempora amet, accusamus aspernatur
-            molestias quia cumque repellendus dolorum labore repellat veniam at tempore alias fugit omnis! Libero quia
-            quo culpa ex officiis!</div>
+        <div class="top">
+            <label for="place"></label>
+            <div class="select">
+                <select name="place" id="place">
+                    <option value="leumi">Leumi, Beit Mani...</option>
+                    <option value="leumi">Leumi, Beit Mani...</option>
+                    <option value="leumi">Leumi, Beit Mani...</option>
+                    <option value="leumi">Leumi, Beit Mani...</option>
+                    <option value="leumi">Leumi, Beit Mani...</option>
+                </select>
+            </div>
+            <div class="select">
+                <select name="floor" id="floor">
+                    <option value="leumi">floor -1</option>
+                    <option value="leumi">floor 0</option>
+                    <option value="leumi">floor 1</option>
+                    <option value="leumi">floor 2</option>
+                    <option value="leumi">floor 3</option>
+                </select>
+            </div>
+            <div></div>
+            <div><p>last update on 21/11/2021 19:20 <button class="btn btn1"><i class="fa-solid fa-arrow-rotate-right"></i> Refresh</button></p></div>
+        </div>
     </div>
 </body>
 
