--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li style="background-color: rgb(122, 29, 199);"><a href="index.html"><i class="fa-solid fa-house-user"></i>
                     Main
-                    Dasbord</a></li>
+                    Dasboard</a></li>
             <li><a href="Employees.html"><i class="fa-solid fa-street-view"></i> Employees</a></li>
             <li><a href="Parking.html"><i class="fa-solid fa-square-parking"></i> Parking</a></li>
             <li><a href="IDTags.html"><i class="fa-solid fa-fingerprint"></i> ID tags</a></li>
@@ -46,7 +46,11 @@
                 </select>
             </div>
             <div></div>
-            <div><p>last update on 21/11/2021 19:20 <button class="btn btn1"><i class="fa-solid fa-arrow-rotate-right"></i> Refresh</button></p></div>
+            <div>
+                <p>last update on 21/11/2021 19:20 <button class="btn btn1"><i
+                            class="fa-solid fa-arrow-rotate-right"></i> Refresh</button> <button
+                        class="btn btn2">SH</button></p>
+            </div>
         </div>
     </div>
 </body>
