--- a/Employees.html
+++ b/Employees.html
@@ -15,8 +15,9 @@
         <Header><i class="fa-solid fa-car-tunnel"></i> Easy Park</Header>
         <ul>
             <li><a href="index.html"><i class="fa-solid fa-house-user"></i> Main
-                    Dasbord</a></li>
-            <li style="background-color: rgb(122, 29, 199);"><a href="Employees.html"><i class="fa-solid fa-street-view"></i> Employees</a></li>
+                    Dasboard</a></li>
+            <li style="background-color: rgb(122, 29, 199);"><a href="Employees.html"><i
+                        class="fa-solid fa-street-view"></i> Employees</a></li>
             <li><a href="Parking.html"><i class="fa-solid fa-square-parking"></i> Parking</a></li>
             <li><a href="IDTags.html"><i class="fa-solid fa-fingerprint"></i> ID tags</a></li>
             <li><a href="ParkingLot.html"><i class="fa-solid fa-warehouse"></i> Parking lot</a></li>
